# n8n-to-mermaid

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml  publish-container.yml
apps/web/: index.html  package.json
apps/web/assets/: app.js  converter.js  styles.css
apps/web/tests/: converter.test.mjs
examples/input/: simple-workflow.json
examples/output/: simple-workflow.mmd
src/n8n_to_mermaid/: __init__.py  cli.py  converter.py  server.py
src/n8n_to_mermaid/core/: __init__.py  mermaid.py  models.py  parser.py
tests/: test_converter.py  test_examples.py  test_server.py
